# agenticmessagerouter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: README.md  deploy.sh  install.sh
deploy/systemd/: amr-poll.service  amr-web.service
docs/architecture/: data-information-flow.md
docs/delivery/: 01-营销资料.md  02-使用手册.md  03-培训手册.md  04-运维手册.md  05-报价手册.md
docs/devlog/: 2026-06-17-amr-v0.7-v0.9.1.md  2026-06-18-amr-self-multiaccount-and-powerdata-contract.md
docs/reference/: wechat-identity-model.md  wechat-message-types.md
docs/runbooks/: amr-ops-api-for-ops-agent.md  onboard-fullwechat-account.md
minutes/obcn9n5i666553hqb6442j16/: transcript.txt
ops/: fullwechat-backends.example.json
scripts/: secrets-scan.sh  sync-contracts.sh
src/jl/: __init__.py  asr.py  assist.py  cli.py  (+22 more)
tests/: test_asr.py  test_assist.py  test_autocomms.py  test_autocomms_group_gate.py  test_autocomms_llm_gate.py  test_autonomy.py  test_channels.py  test_cli.py  test_conformance_fixtures.py  test_contract_validate.py  test_db.py  test_diagnosis.py  test_digest.py  test_feishu_send.py  test_fullwechat.py  test_gate.py  test_ingest.py  test_ingest_run.py  test_lark.py  test_lifecycle.py  test_llm.py  test_matters.py  test_migrate.py  test_onboard.py  test_onboard_registry.py  test_person.py  test_phone_adapter.py  test_poll_targets.py  test_powerdata.py  test_push.py  test_read_unavailable.py  test_recall.py  test_routing.py  test_safe_phrase_seed.py  test_safe_phrases.py  test_self.py  test_self_dismiss.py  test_send.py  test_store.py  test_ui_trace.py  (+9 more)
(+49 files in other folders)
