[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticmessagerouter"
version = "0.10.0"
description = "jl — relationship-account router: multi-channel last-interaction audit with human-in-the-loop"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
jl = "jl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
